# xorg-libXaw

./: .gitignore  ChangeLog  Makefile.am  configure.ac  xaw.m4  xaw6.pc.in  xaw7.pc.in  xaw8.pc.in
Xaw6/: Makefile.am
Xaw7/: Makefile.am
Xaw8/: Makefile.am
include/: Makefile.am
include/X11/Xaw/: AsciiSink.h  AsciiSinkP.h  AsciiSrc.h  AsciiSrcP.h  AsciiText.h  AsciiTextP.h  Box.h  BoxP.h  Command.h  CommandP.h  Dialog.h  DialogP.h  Form.h  FormP.h  Grip.h  GripP.h  Label.h  LabelP.h  List.h  ListP.h  MenuButtoP.h  MenuButton.h  MultiSink.h  MultiSinkP.h  MultiSrc.h  MultiSrcP.h  Paned.h  PanedP.h  Panner.h  PannerP.h  Porthole.h  PortholeP.h  Print.h  Repeater.h  RepeaterP.h  Scrollbar.h  ScrollbarP.h  Simple.h  SimpleMenP.h  SimpleMenu.h  (+27 more)
man/: Makefile.am  Xaw.man
old-doc/: Changelog
spec/: .gitignore  Makefile.am
specs/: AsciiSink.xml  AsciiSource.xml  AsciiText.xml  CH1.xml  CH2.xml  CH4.xml  CH5.xml  CH6.xml  CH7.xml  Command.xml  Dialog.xml  Form.xml  Grip.xml  List.xml  Makefile.am  MenuButton.xml  Paned.xml  Panner.xml  Porthole.xml  Repeater.xml  Scrollbar.xml  SimpleMenu.xml  Sme.xml  SmeBSB.xml  Template.xml  Template_private_header_file.xml  Template_public_header_file.xml  Template_widget_source_file.xml  TextActions.xml  TextActions_default_translation_bindings.xml  TextActions_text_widget_actions.xml  TextFuncs.xml  TextSink.xml  TextSource.xml  Toggle.xml  Tree.xml  libXaw.xml  list.txt
src/: Actions.c  AllWidgets.c  AsciiSink.c  AsciiSrc.c  AsciiText.c  Box.c  Command.c  Converters.c  Dialog.c  DisplayList.c  Form.c  Grip.c  Label.c  List.c  Makefile.am  MenuButton.c  MultiSink.c  MultiSrc.c  OS.c  Paned.c  Panner.c  Pixmap.c  Porthole.c  PrintShell.c  Private.h  Repeater.c  Scrollbar.c  Simple.c  SimpleMenu.c  Sme.c  SmeBSB.c  SmeLine.c  StripChart.c  Text.c  TextAction.c  TextPop.c  TextSink.c  TextSrc.c  TextTr.c  Tip.c  (+9 more)
